common/gatekeeper-policies/tests/fixtures/GkImagesFromCorrectRegistry/pod-one-image-wrong.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy
  labels:
    ccloud/support-group: foo-group
    ccloud/service: dummy
spec:
  containers:
  - name: dummy-big
    image: alpine:3
    args: [ "sleep", "86400" ]
    resources:
      limits:
        cpu: "10"
        memory: 3Gi
      requests:
        cpu: "5"
        memory: 2Gi
  - name: dummy-small
    image: keppel.ab.cloud.sap/alpine:3
    args: [ "sleep", "86400" ]
