common/gatekeeper-policies/tests/response-config.yaml
# These entries are for image references that we pull from the container status.
# Therefore, they include fixed manifest digests.
keppel.example.com/vulnerability:clean@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Clean
keppel.example.com/vulnerability:low@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Low
keppel.example.com/vulnerability:medium@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Medium
keppel.example.com/vulnerability:high@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: High
keppel.example.com/vulnerability:old@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  # older than slightly over a year (~13 months)
  X-Keppel-Max-Layer-Created-At: "-10000h"
  X-Keppel-Min-Layer-Created-At: "-10000h"
keppel.example.com/ccloud/servicemesh/proxy:low@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Low
keppel.example.com/ccloud/servicemesh/proxy-init:high@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: High

# These entries are for image references that we pull from the container spec.
# They do not include manifest digests, since container specs usually reference tags only.
keppel.example.com/vulnerability-unpinned:clean:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Clean
keppel.example.com/vulnerability-unpinned:low:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Low
keppel.example.com/vulnerability-unpinned:medium:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Medium
keppel.example.com/vulnerability-unpinned:high:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: High
keppel.example.com/vulnerability-unpinned:old:
  # older than slightly over a year (~13 months)
  X-Keppel-Max-Layer-Created-At: "-10000h"
  X-Keppel-Min-Layer-Created-At: "-10000h"
