common/gatekeeper-policies/tests/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: gatekeeper-tests
tests:

################################################################################
# library tests

- name: libtest-add-support-labels
  template: rendered-chart/templates/constrainttemplate-GkLibtestAddSupportLabels.yaml
  constraint: rendered-chart/templates/constraint-GkLibtestAddSupportLabels.yaml
  cases:
  - name: support-labels-on-pod-filled
    object: fixtures/GkLibtestAddSupportLabels/pod-filled.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> test for from_k8s_object\(\)$'
  - name: support-labels-on-pod-missing
    object: fixtures/GkLibtestAddSupportLabels/pod-missing.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> test for from_k8s_object\(\)$'
  - name: support-labels-on-helm-release-filled
    object: fixtures/GkLibtestAddSupportLabels/helm-release-filled.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> test for from_helm_release\(\)$'
  - name: support-labels-on-helm-release-missing
    object: fixtures/GkLibtestAddSupportLabels/helm-release-missing.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> test for from_helm_release\(\)$'

- name: libtest-traversal
  template: rendered-chart/templates/constrainttemplate-GkLibtestTraversal.yaml
  constraint: rendered-chart/templates/constraint-GkLibtestTraversal.yaml
  cases:
  - name: traversal-for-cronjob
    object: fixtures/GkLibtestTraversal/cronjob.yaml
    assertions:
    - violations: 1
      message: '^found a relevant pod with marker "pod in cronjob" and containers "alpine", "init-busybox", "ubuntu"$'
  - name: traversal-for-daemonset
    object: fixtures/GkLibtestTraversal/daemonset.yaml
    assertions:
    - violations: 1
      message: '^found a relevant pod with marker "pod in daemonset" and containers "alpine", "init-busybox", "ubuntu"$'
  - name: traversal-for-deployment
    object: fixtures/GkLibtestTraversal/deployment.yaml
    assertions:
    - violations: 1
      message: '^found a relevant pod with marker "pod in deployment" and containers "alpine", "init-busybox", "ubuntu"$'
  - name: traversal-for-job
    object: fixtures/GkLibtestTraversal/job.yaml
    assertions:
    - violations: 1
      message: '^found a relevant pod with marker "pod in job" and containers "alpine", "init-busybox", "ubuntu"$'
  - name: traversal-for-job-in-cronjob
    object: fixtures/GkLibtestTraversal/job-in-cronjob.yaml
    assertions:
    - violations: 1
      message: '^no relevant pod found$' # suppressed because of owner reference
  - name: traversal-for-pod
    object: fixtures/GkLibtestTraversal/pod.yaml
    assertions:
    - violations: 1
      message: '^found a relevant pod with marker "individual pod" and containers "alpine", "init-busybox", "ubuntu"$'
  - name: traversal-for-pod-minimal
    object: fixtures/GkLibtestTraversal/pod-minimal.yaml # special case: tests empty `initContainers`
    assertions:
    - violations: 1
      message: '^found a relevant pod with marker "minimal pod" and containers "alpine"$'
  - name: traversal-for-pod-in-daemonset
    object: fixtures/GkLibtestTraversal/pod-in-daemonset.yaml
    assertions:
    - violations: 1
      message: '^no relevant pod found$' # suppressed because of owner reference
  - name: traversal-for-pod-in-job
    object: fixtures/GkLibtestTraversal/pod-in-job.yaml
    assertions:
    - violations: 1
      message: '^no relevant pod found$' # suppressed because of owner reference
  - name: traversal-for-pod-in-replicaset
    object: fixtures/GkLibtestTraversal/pod-in-replicaset.yaml
    assertions:
    - violations: 1
      message: '^no relevant pod found$' # suppressed because of owner reference
  - name: traversal-for-pod-in-statefulset
    object: fixtures/GkLibtestTraversal/pod-in-statefulset.yaml
    assertions:
    - violations: 1
      message: '^no relevant pod found$' # suppressed because of owner reference
  - name: traversal-for-pod-in-unknown-owner
    object: fixtures/GkLibtestTraversal/pod-in-unknown-owner.yaml # special case: tests `ownerReferences` pointing to unexpected owner
    assertions:
    - violations: 1
      # because we do not know this owner, we have to report violations on this level
      message: '^found a relevant pod with marker "pod in unknown owner" and containers "alpine", "init-busybox", "ubuntu"$'
  - name: traversal-for-replicaset
    object: fixtures/GkLibtestTraversal/replicaset.yaml
    assertions:
    - violations: 1
      message: '^found a relevant pod with marker "pod in replicaset" and containers "alpine", "init-busybox", "ubuntu"$'
  - name: traversal-for-replicaset-in-deployment
    object: fixtures/GkLibtestTraversal/replicaset-in-deployment.yaml
    assertions:
    - violations: 1
      message: '^no relevant pod found$' # suppressed because of owner reference
  - name: traversal-for-statefulset
    object: fixtures/GkLibtestTraversal/statefulset.yaml
    assertions:
    - violations: 1
      message: '^found a relevant pod with marker "pod in statefulset" and containers "alpine", "init-busybox", "ubuntu"$'

################################################################################
# policy tests

- name: deprecated-api-version-k8s1.32
  template: rendered-chart/templates/constrainttemplate-GkDeprecatedApiVersion.yaml
  constraint: rendered-chart/templates/constraint-GkDeprecatedApiVersion.yaml
  cases:
  - name: helm-release-deprecated-api-version-1.32
    object: fixtures/GkDeprecatedApiVersion/helm-release-deprecated-1.32.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> FlowSchema dummy declared with deprecated API version: flowcontrol.apiserver.k8s.io/v1beta3 \(will break in k8s v1.32\)$'
  - name: helm-release-clean
    object: fixtures/GkDeprecatedApiVersion/helm-release-clean.out.yaml
    assertions:
    - violations: no

- name: forbidden-clusterwide-objects
  template: rendered-chart/templates/constrainttemplate-GkForbiddenClusterwideObjects.yaml
  constraint: rendered-chart/templates/constraint-GkForbiddenClusterwideObjects.yaml
  cases:
  - name: gatekeeper-validating-webhook-configuration
    object: fixtures/GkForbiddenClusterwideObjects/gatekeeper-validating-webhook-configuration.yaml
    assertions:
    - violations: no
  - name: cert-manager-mutating-webhook
    object: fixtures/GkForbiddenClusterwideObjects/cert-manager-mutating-webhook.yaml
    assertions:
    # TODO: repair this
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> webhook "webhook.cert-manager.io" does not match our allowlist$'
  - name: cert-manager-validating-webhook
    object: fixtures/GkForbiddenClusterwideObjects/cert-manager-validating-webhook.yaml
    assertions:
    # TODO: repair this
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> webhook "webhook.cert-manager.io" does not match our allowlist$'
  - name: seeder.cloud.sap
    object: fixtures/GkForbiddenClusterwideObjects/seeder.cloud.sap.yaml
    assertions:
    # TODO: repair this
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> webhook "validate-networks.spec.openstack.networks.seeder.cloud.sap" does not match our allowlist$'
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> webhook "validate-domains.spec.openstack.domains.seeder.cloud.sap" does not match our allowlist$'

- name: high-cpu-requests
  template: rendered-chart/templates/constrainttemplate-GkHighCPURequests.yaml
  constraint: rendered-chart/templates/constraint-GkHighCPURequests.yaml
  cases:
  - name: pod-failure
    object: fixtures/GkHighCPURequests/pod-failure.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> requests 6.064 CPU in total$'
  - name: pod-close-violation
    object: fixtures/GkHighCPURequests/pod-close-violation.yaml
    assertions:
    - violations: no
  - name: pod-only-one-limit
    object: fixtures/GkHighCPURequests/pod-only-one-limit.yaml
    assertions:
    - violations: no
  - name: pod-no-limits
    object: fixtures/GkHighCPURequests/pod-no-limits.yaml
    assertions:
    - violations: no

- name: images-from-correct-registry
  template: rendered-chart/templates/constrainttemplate-GkImagesFromCorrectRegistry.yaml
  constraint: rendered-chart/templates/constraint-GkImagesFromCorrectRegistry.yaml
  cases:
  - name: pod-one-image-wrong
    object: fixtures/GkImagesFromCorrectRegistry/pod-one-image-wrong.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> container "dummy-small" uses incorrect regional registry for image: alpine:3$'
  - name: pod-pass
    object: fixtures/GkImagesFromCorrectRegistry/pod-pass.yaml
    assertions:
    - violations: no

- name: images-from-non-keppel
  template: rendered-chart/templates/constrainttemplate-GkImagesFromNonKeppel.yaml
  constraint: rendered-chart/templates/constraint-GkImagesFromNonKeppel.yaml
  cases:
  - name: pod-failure
    object: fixtures/GkImagesFromNonKeppel/pod-failure.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> container "dummy" uses an image that is not from a Keppel registry: alpine:3$'
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> container "dummy" uses an image that is not from a Keppel registry: alpine:3$'
  - name: pod-one-of-two
    object: fixtures/GkImagesFromNonKeppel/pod-one-of-two.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> container "dummy" uses an image that is not from a Keppel registry: alpine:3$'
  - name: pod-pass
    object: fixtures/GkImagesFromNonKeppel/pod-pass.yaml
    assertions:
    - violations: no
  # The test suite for this policy is a bit more expansive to check the logic in traversal.find_pod().
  - name: pod-owned
    object: fixtures/GkImagesFromNonKeppel/pod-owned.yaml
    assertions:
    - violations: no
  - name: deployment-mixed
    object: fixtures/GkImagesFromNonKeppel/deployment-mixed.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> container "container-bad" uses an image that is not from a Keppel registry: alpine:3$'
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> container "starter-bad" uses an image that is not from a Keppel registry: alpine:3$'

- name: ingress-annotations-insecure-snippets
  template: rendered-chart/templates/constrainttemplate-GkIngressAnnotations.yaml
  constraint: rendered-chart/templates/constraint-GkIngressAnnotations.yaml
  cases:
  - name: networking-disabled-snippet
    object: fixtures/GkIngressAnnotations/networking-disabled-snippet.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> has disabled annotation: "ingress.kubernetes.io/configuration-snippet" \(disabled due to CVE-2021-25742\)$'
  - name: networking-pass
    object: fixtures/GkIngressAnnotations/networking-pass.yaml
    assertions:
    - violations: no

- name: ingress-annotations-migration
  template: rendered-chart/templates/constrainttemplate-GkIngressAnnotationsMigration.yaml
  constraint: rendered-chart/templates/constraint-GkIngressAnnotationsMigration.yaml
  cases:
  - name: fail-mismatch
    object: fixtures/GkIngressAnnotationsMigration/fail-mismatch.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> has not correctly migrated ingress.kubernetes.io/proxy-request-buffering annotation \(value in old annotation is "off", value in new annotation is "on"\)$'
  - name: fail-new-missing
    object: fixtures/GkIngressAnnotationsMigration/fail-new-missing.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> has not correctly migrated ingress.kubernetes.io/proxy-request-buffering annotation \(value in old annotation is "off", value in new annotation is "<unset>"\)$'
  - name: fail-old-missing
    object: fixtures/GkIngressAnnotationsMigration/fail-old-missing.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> has deleted ingress.kubernetes.io/proxy-request-buffering annotation too early \(ingress-nginx is still using the old prefix right now\)'
  - name: pass
    object: fixtures/GkIngressAnnotationsMigration/pass.yaml
    assertions:
    - violations: no

- name: outdated-image-bases
  template: rendered-chart/templates/constrainttemplate-GkOutdatedImageBases.yaml
  constraint: rendered-chart/templates/constraint-GkOutdatedImageBases.yaml
  cases:
  - name: deployment-old
    object: fixtures/GkOutdatedImageBases/deployment-old.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability-unpinned:old for container "dummy" uses a very old base image \(oldest layer is 417 days old\)$'
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability-unpinned:old for container "starter" uses a very old base image \(oldest layer is 417 days old\)$'
  - name: deployment-new
    object: fixtures/GkOutdatedImageBases/deployment-new.yaml
    assertions:
    - violations: no

- name: owner-info-on-helm-releases
  template: rendered-chart/templates/constrainttemplate-GkOwnerInfoOnHelmReleases.yaml
  constraint: rendered-chart/templates/constraint-GkOwnerInfoOnHelmReleases.yaml
  cases:
  - name: configmap-no-owner
    object: fixtures/GkOwnerInfoOnHelmReleases/configmap-no-owner.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> Chart does not contain owner info. Please add the common/owner-info chart as a direct dependency.$'
  - name: configmap-no-owner-pending-upgrade
    object: fixtures/GkOwnerInfoOnHelmReleases/configmap-no-owner-pending-upgrade.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> Chart does not contain owner info. Please add the common/owner-info chart as a direct dependency.$'
  - name: configmap-no-owner-superseded
    object: fixtures/GkOwnerInfoOnHelmReleases/configmap-no-owner-superseded.out.yaml
    assertions:
    - violations: no
  - name: configmap-outdated-chart
    object: fixtures/GkOwnerInfoOnHelmReleases/configmap-outdated-chart.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> Chart uses outdated owner-info version "0.1.2". Please update to at least "0.2.0".$'
  - name: pod-owner-info
    object: fixtures/GkOwnerInfoOnHelmReleases/configmap-no-owner-but-allowlisted.out.yaml
    assertions:
    - violations: no
  - name: pod-owner-info
    object: fixtures/GkOwnerInfoOnHelmReleases/configmap-pass.out.yaml
    assertions:
    - violations: no

- name: pci-forbidden-images
  template: rendered-chart/templates/constrainttemplate-GkPCIForbiddenImages.yaml
  constraint: rendered-chart/templates/constraint-GkPCIForbiddenImages.yaml
  cases:
  - name: pod-forbidden-image
    object: fixtures/GkPCIForbiddenImages/pod-with-forbidden-image.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> container "dummy" uses forbidden image: bogus-pattern-for-testing:3$'
  - name: pod-pass
    object: fixtures/GkPCIForbiddenImages/pod-pass.yaml
    assertions:
    - violations: no

- name: pod-labels
  template: rendered-chart/templates/constrainttemplate-GkPodLabels.yaml
  constraint: rendered-chart/templates/constraint-GkPodLabels.yaml
  cases:
  - name: pod-invalid-labels
    object: fixtures/GkPodLabels/pod-invalid-labels.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"gatekeeper","service":"containers"\} >> pod has an unacceptable label value: ccloud/support-group="gatekeeper"$'
  - name: pod-no-labels
    object: fixtures/GkPodLabels/pod-no-labels.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod does not have the required label: ccloud/support-group$'
  - name: deployment-labels
    object: fixtures/GkPodLabels/deployment-labels.yaml
    assertions:
    - violations: no
  - name: pod-labels
    object: fixtures/GkPodLabels/pod-labels.yaml
    assertions:
    - violations: no

- name: pod-security-v2
  template: rendered-chart/templates/constrainttemplate-GkPodSecurityV2.yaml
  constraint: rendered-chart/templates/constraint-GkPodSecurityV2.yaml
  cases:
  - name: pod-security-v2-reject-host-network
    object: fixtures/GkPodSecurityV2/host-network-reject.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.hostNetwork = true$'
  - name: pod-security-v2-no-rule-for-host-network
    object: fixtures/GkPodSecurityV2/host-network-no-rule.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.hostNetwork = true$'
  - name: pod-security-v2-allow-host-network
    object: fixtures/GkPodSecurityV2/host-network-allow.yaml
    assertions:
    - violations: no
  - name: pod-security-v2-reject-host-pid
    object: fixtures/GkPodSecurityV2/host-pid-reject.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.hostPID = true$'
  - name: pod-security-v2-no-rule-for-host-pid
    object: fixtures/GkPodSecurityV2/host-pid-no-rule.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.hostPID = true$'
  - name: pod-security-v2-allow-host-pid
    object: fixtures/GkPodSecurityV2/host-pid-allow.yaml
    assertions:
    - violations: no
  - name: pod-security-v2-reject-privilege-escalation
    object: fixtures/GkPodSecurityV2/privilege-escalation-reject.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.containers\["foo-container"].securityContext.allowPrivilegeEscalation = true \(image = "test-app/unprivileged"\)$'
  - name: pod-security-v2-no-rule-for-privilege-escalation
    object: fixtures/GkPodSecurityV2/privilege-escalation-no-rule.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.containers\["foo-container"].securityContext.allowPrivilegeEscalation = true \(image = "other/unknown"\)$'
  - name: pod-security-v2-allow-privilege-escalation
    object: fixtures/GkPodSecurityV2/privilege-escalation-allow.yaml
    assertions:
    - violations: no
  - name: pod-security-v2-reject-privileged
    object: fixtures/GkPodSecurityV2/is-privileged-reject.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.containers\["foo-container"].securityContext.privileged = true \(image = "test-app/unprivileged"\)$'
  - name: pod-security-v2-no-rule-for-privileged
    object: fixtures/GkPodSecurityV2/is-privileged-no-rule.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.containers\["foo-container"].securityContext.privileged = true \(image = "other/unknown"\)$'
  - name: pod-security-v2-allow-privileged
    object: fixtures/GkPodSecurityV2/is-privileged-allow.yaml
    assertions:
    - violations: no
  - name: pod-security-v2-reject-capabilities
    object: fixtures/GkPodSecurityV2/capabilities-reject.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.containers\["foo-container"].securityContext.capabilities.add = \["SYS_ADMIN"] \(image = "test-app/unprivileged"\)$'
  - name: pod-security-v2-no-rule-for-capabilities
    object: fixtures/GkPodSecurityV2/capabilities-no-rule.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.containers\["foo-container"].securityContext.capabilities.add = \["FOO"] \(image = "other/unknown"\)$'
  - name: pod-security-v2-allow-capabilities
    object: fixtures/GkPodSecurityV2/capabilities-allow.yaml
    assertions:
    - violations: no
  - name: pod-security-v2-reject-host-path-volumes-r
    object: fixtures/GkPodSecurityV2/host-path-volumes-reject-r.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> container \"foo-container\" in this pod is not allowed to mount hostPath volumes with path \"/\" \(readonly = true\) \(image = "test-app/unprivileged"\)$'
  - name: pod-security-v2-reject-host-path-volumes-rw
    object: fixtures/GkPodSecurityV2/host-path-volumes-reject-rw.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> container \"foo-container\" in this pod is not allowed to mount hostPath volumes with path \"/\" \(readonly = false\) \(image = "test-app/unprivileged"\)$'
  - name: pod-security-v2-reject-host-path-volumes-w
    object: fixtures/GkPodSecurityV2/host-path-volumes-reject-w.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> container \"foo-container\" in this pod is not allowed to mount hostPath volumes with path \"/\" \(readonly = false\) \(image = "test-app/unprivileged"\)$'
  - name: pod-security-v2-no-rule-for-host-path-volumes-r
    object: fixtures/GkPodSecurityV2/host-path-volumes-no-rule-r.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> container \"foo-container\" in this pod is not allowed to mount hostPath volumes with path \"/\" \(readonly = true\) \(image = "other/unknown"\)$'
  - name: pod-security-v2-no-rule-for-host-path-volumes-w
    object: fixtures/GkPodSecurityV2/host-path-volumes-no-rule-w.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> container \"foo-container\" in this pod is not allowed to mount hostPath volumes with path \"/\" \(readonly = false\) \(image = "other/unknown"\)$'
  - name: pod-security-v2-allow-host-path-volumes-r
    object: fixtures/GkPodSecurityV2/host-path-volumes-allow-r.yaml
    assertions:
    - violations: no
  - name: pod-security-v2-allow-host-path-volumes-rw
    object: fixtures/GkPodSecurityV2/host-path-volumes-allow-rw.yaml
    assertions:
    - violations: no
  - name: pod-security-v2-allow-host-path-volumes-w
    object: fixtures/GkPodSecurityV2/host-path-volumes-allow-w.yaml
    assertions:
    - violations: no
  - name: pod-security-v2-check-image-repo-parsing
    object: fixtures/GkPodSecurityV2/image-repo-parsing.yaml
    assertions:
    - violations: no
  - name: pod-security-v2-reject-security-nightmare
    object: fixtures/GkPodSecurityV2/invalid.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.hostNetwork = true$'
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.hostPID = true$'
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.containers\["mallory"].securityContext.allowPrivilegeEscalation = true \(image = "test-app/unprivileged"\)$'
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.containers\["mallory"].securityContext.privileged = true \(image = "test-app/unprivileged"\)$'
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not allowed to set spec.containers\["mallory"].securityContext.capabilities.add = \["SYS_ADMIN"] \(image = "test-app/unprivileged"\)$'
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> container \"mallory\" in this pod is not allowed to mount hostPath volumes with path \"/\" \(readonly = false\) \(image = "test-app/unprivileged"\)$'


- name: prometheus-scrape-annotations
  template: rendered-chart/templates/constrainttemplate-GkPrometheusScrapeAnnotations.yaml
  constraint: rendered-chart/templates/constraint-GkPrometheusScrapeAnnotations.yaml
  cases:
  - name: pod-missing-target
    object: fixtures/GkPrometheusScrapeAnnotations/pod-missing-target.yaml
    inventory:
    - fixtures/GkPrometheusScrapeAnnotations/inventory.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> has prometheus.io/scrape annotation, but prometheus.io/targets annotation is missing or does not have a valid value \(got: \[""\], valid: \["openstack"\]\)$'
  - name: pod-pass
    object: fixtures/GkPrometheusScrapeAnnotations/pod-pass.yaml
    inventory:
    - fixtures/GkPrometheusScrapeAnnotations/inventory.yaml
    assertions:
    - violations: no

- name: prometheusrule-alert-labels
  template: rendered-chart/templates/constrainttemplate-GkPrometheusruleAlertLabels.yaml
  constraint: rendered-chart/templates/constraint-GkPrometheusruleAlertLabels.yaml
  cases:
  - name: prometheus-rule-no-label
    object: fixtures/GkPrometheusruleAlertLabels/prometheus-rule-no-label.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> rule DummyBackupWentMissing in group backup.alerts does not have a valid value for labels.severity \("critical", "warning", "info" or "none"\)$'
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> rule DummyBackupWentMissing in group backup.alerts does not have labels.support_group$'
  - name: prometheus-rule-only-severity
    object: fixtures/GkPrometheusruleAlertLabels/prometheus-rule-only-severity.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> rule DummyBackupWentMissing in group backup.alerts does not have a valid value for labels.playbook \(required for critical alerts\)$'
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> rule DummyBackupWentMissing in group backup.alerts does not have labels.support_group$'
  - name: prometheus-rule-pass
    object: fixtures/GkPrometheusruleAlertLabels/prometheus-rule-pass.yaml
    assertions:
    - violations: no

- name: region-value-mismatch
  template: rendered-chart/templates/constrainttemplate-GkRegionValueMismatch.yaml
  constraint: rendered-chart/templates/constraint-GkRegionValueMismatch.yaml
  cases:
  - name: helm-release-region-mismatch
    object: fixtures/GkRegionValueMismatch/helm-release-region-mismatch.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> .Values.global.region does not match the deployed region: expected qa-de-1, but found "qa-de-9"$'
  - name: helm-release-global-mismatch
    object: fixtures/GkRegionValueMismatch/helm-release-global-mismatch.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> .Values.global.db_region does not match the deployed region: expected qa-de-1, but found "qa-de-9"$'
  - name: helm-release-global-pass
    object: fixtures/GkRegionValueMismatch/helm-release-global-pass.out.yaml
    assertions:
    - violations: no
  - name: helm-release-no-region
    object: fixtures/GkRegionValueMismatch/helm-release-no-region.out.yaml
    assertions:
    - violations: no
  - name: helm-release-invalid-region
    object: fixtures/GkRegionValueMismatch/helm-release-invalid-region.out.yaml
    assertions:
    - violations: no
  - name: helm-release-pass
    object: fixtures/GkRegionValueMismatch/helm-release-pass.out.yaml
    assertions:
    - violations: no

- name: region-value-missing
  template: rendered-chart/templates/constrainttemplate-GkRegionValueMissing.yaml
  constraint: rendered-chart/templates/constraint-GkRegionValueMissing.yaml
  cases:
  - name: helm-release-no-region
    object: fixtures/GkRegionValueMissing/helm-release-no-region.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> missing or invalid .Values.global.region value$'
  - name: helm-release-global-no-db-region
    object: fixtures/GkRegionValueMissing/helm-release-global-no-db-region.out.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"foo-group","service":"dummy"\} >> missing or invalid .Values.global.db_region value$'
  - name: helm-release-global-region-pass
    object: fixtures/GkRegionValueMissing/helm-release-global-region-pass.out.yaml
    assertions:
    - violations: no
  - name: helm-release-pass
    object: fixtures/GkRegionValueMissing/helm-release-pass.out.yaml
    assertions:
    - violations: no

- name: unmanaged-pods
  template: rendered-chart/templates/constrainttemplate-GkUnmanagedPods.yaml
  constraint: rendered-chart/templates/constraint-GkUnmanagedPods.yaml
  cases:
  - name: pod-without-owner
    object: fixtures/GkUnmanagedPods/pod-without-owner.yaml
    assertions:
    - violations: 1
      message: '^\{"support_group":"none","service":"none"\} >> pod is not owned by a managing construct$'
  - name: pod-in-deployment
    object: fixtures/GkUnmanagedPods/pod-in-deployment.yaml
    assertions:
    - violations: no
  - name: pv-recycler-pod
    object: fixtures/GkUnmanagedPods/pv-recycler-pod.yaml
    assertions:
    - violations: no

- name: vulnerable-images-on-pod-owner
  template: rendered-chart/templates/constrainttemplate-GkVulnerableImages.yaml
  constraint: rendered-chart/templates/constraint-GkVulnerableImages.yaml
  cases:
  - name: deployment-vulnerable
    object: fixtures/GkVulnerableImages/deployment-vulnerable.yaml
    assertions:
    - violations: 1
      message: '^\{"status":"Low","support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability-unpinned:low for container "dummylow" has "X-Keppel-Vulnerability-Status: Low"$'
    - violations: 1
      message: '^\{"status":"Medium","support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability-unpinned:medium for container "dummymedium" has "X-Keppel-Vulnerability-Status: Medium"$'
    - violations: 1
      message: '^\{"status":"High","support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability-unpinned:high for container "starter" has "X-Keppel-Vulnerability-Status: High"$'
  - name: deployment-unclear
    object: fixtures/GkVulnerableImages/deployment-unclear.yaml
    assertions:
    - violations: 1
      message: '^\{"status":"Unclear","support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability-unpinned:unclear for container "dummy" has "X-Keppel-Vulnerability-Status: Unclear"$'
  - name: deployment-clean
    object: fixtures/GkVulnerableImages/deployment-clean.yaml
    assertions:
    - violations: no
  - name: pod-vulnerable
    object: fixtures/GkVulnerableImages/pod-vulnerable.yaml
    assertions:
    - violations: 1
      message: '^\{"status":"Low","support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability:low for container "dummylow" has "X-Keppel-Vulnerability-Status: Low"$'
    - violations: 1
      message: '^\{"status":"Medium","support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability:medium for container "dummymedium" has "X-Keppel-Vulnerability-Status: Medium"$'
    - violations: 1
      message: '^\{"status":"High","support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability:high for container "starter" has "X-Keppel-Vulnerability-Status: High"$'
  - name: pod-vulnerable-in-linkerd
    object: fixtures/GkVulnerableImages/pod-vulnerable-in-linkerd.yaml
    assertions:
    - violations: 1
      message: '^\{"status":"Low","support_group":"containers","service":"linkerd"\} >> image keppel.example.com/ccloud/servicemesh/proxy:low for container "linkerd-proxy" has "X-Keppel-Vulnerability-Status: Low"$'
    - violations: 1
      message: '^\{"status":"High","support_group":"containers","service":"linkerd"\} >> image keppel.example.com/ccloud/servicemesh/proxy-init:high for container "linkerd-init" has "X-Keppel-Vulnerability-Status: High"$'
  - name: pod-unclear
    object: fixtures/GkVulnerableImages/pod-unclear.yaml
    assertions:
    - violations: 1
      message: '^\{"status":"Unclear","support_group":"foo-group","service":"dummy"\} >> image keppel.example.com/vulnerability:unclear for container "dummy" has "X-Keppel-Vulnerability-Status: Unclear"$'
  - name: pod-clean
    object: fixtures/GkVulnerableImages/pod-clean.yaml
    assertions:
    - violations: no

- name: restrict-monsoon3-releases
  template: rendered-chart/templates/constrainttemplate-GkRestrictMonsoon3Namespace.yaml
  constraint: rendered-chart/templates/constraint-GkRestrictMonsoon3Namespace.yaml
  cases:
  - name: configmap-forbidden-name
    object: fixtures/GkRestrictMonsoon3Namespace/configmap-forbidden-name.out.yaml
    assertions:
    - violations: 1
      message: 'helm release "forbidden-name" is not allowed in namespace "monsoon3"'
  - name: configmap-pass
    object: fixtures/GkRestrictMonsoon3Namespace/configmap-pass.out.yaml
    assertions:
    - violations: no
  - name: configmap-pass-different-namespace
    object: fixtures/GkRestrictMonsoon3Namespace/configmap-pass-different-namespace.out.yaml
    assertions:
    - violations: no
  - name: not-a-helm-release
    object: fixtures/GkRestrictMonsoon3Namespace/generic-secret.yaml
    assertions:
    - violations: no

- name: restricted-su2
  template: rendered-chart/templates/constrainttemplate-GkRestrictedSu2.yaml
  constraint: rendered-chart/templates/constraint-GkRestrictedSu2.yaml
  cases:
  - name: elevated-group-allowed
    object: fixtures/GkRestrictedSu2/elevated-allowed.yaml
    assertions:
    - violations: no
  - name: non-elevated-denied
    object: fixtures/GkRestrictedSu2/non-elevated-denied.yaml
    assertions:
    - violations: 1
      message: 'require elevated permissions'
  - name: allowed-automation-user
    object: fixtures/GkRestrictedSu2/allowed-automation-user.yaml
    assertions:
    - violations: no
  - name: delete-non-elevated-denied
    object: fixtures/GkRestrictedSu2/delete-non-elevated-denied.yaml
    assertions:
    - violations: 1
      message: 'require elevated permissions'
